--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-router": "^1.57.15",
     "@tanstack/start": "^1.57.15",
     "isbot": "^5.1.17",
+    "proj4": "^2.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.4.11",
@@ -19,6 +20,7 @@
     "vinxi": "^0.4.3"
   },
   "devDependencies": {
+    "@types/proj4": "^2",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
